<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_menu_principal">Demo Layout - Clubes</string>
    <string name="label_cadastrar">Cadastrar</string>
    <string name="label_ver_galeria">Ver Galeria</string>
    <string name="label_ver_lista">Ver Lista</string>
    <string name="label_sair">Sair</string>
    <string name="title_activity_galeria_times">GaleriaTimesActivity</string>
    <string name="title_activity_detalhe_image">DetalheImageActivity</string>

    <string name="label_login">Fiap Login</string>
    <string name="label_usuario">Usuário</string>
    <string name="hint_login">Digite o seu login</string>
    <string name="tvSenha">Senha</string>
    <string name="hint_senha">Digite a sua senha</string>
    <string name="label_entrar">Entrar</string>
    <string name="label_novo_usuario">Novo Usuario</string>
    <string name="title_activity_lista">ListaActivity</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="label_nome">Nome</string>
    <string name="btnLimpar">Limpar</string>
    <string name="btnSalvar">Salvar</string>
    <string name="label_mascote">Mascote</string>
    <string name="label_ano">Ano</string>

</resources>
