<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fiap.demolayout.CadastroActivity">

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nome"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNome"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:id="@+id/tvAno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ano"
                android:layout_below="@id/etNome"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/etAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAno"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <TextView
                android:id="@+id/tvMascote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_mascote"
                android:textSize="24sp"
                android:layout_alignBottom="@+id/tvAno"
                android:layout_toRightOf="@+id/etNome"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMascote"
                android:layout_toRightOf="@+id/etNome"
                android:textSize="24sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btnSalvar"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btnLimpar"/>
    </LinearLayout>

</LinearLayout>
